chores: Merge branch 'main' into refactor/architecture
